--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="navigation center">
         <ul class="menu">
             <li class="menu__list"><a href="#" class="menu__link">home</a>
-                <div class="dropdown dropdown_mv dropdown_home">
+                <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">Home</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
@@ -66,7 +66,7 @@
                 </div>
             </li>
             <li class="menu__list"><a href="#" class="menu__link">man</a>
-                <div class="dropdown dropdown_mv">
+                <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">man</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
@@ -105,7 +105,7 @@
                 </div>
             </li>
             <li class="menu__list"><a href="#" class="menu__link">women</a>
-                <div class="dropdown dropdown_mv dropdown_women">
+                <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">women</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
@@ -138,17 +138,93 @@
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
                         <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                     </div>
+                    <div">
+                        <img class="menu__item_img" src="./img/sale_baner.png" alt="">
+                    </div>
+                </div>
+            </li>
+            <li class="menu__list"><a href="#" class="menu__link">kids</a>
+                <div class="dropdown">
+                    <div class="menu__item">
+                        <h3 class="menu__title">kids</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Blazers</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                    </div>
+                    <div class="menu__item">
+                        <h3 class="menu__title">kids</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
+                    <div class="menu__item menu__item_mv-dwn">
+                        <h3 class="menu__title">kids</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                    </div>
+                    <div class="menu__item menu__item_mv-up">
+                        <h3 class="menu__title">kids</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
                     <div class="menu__item menu__item_bg">
                         <img class="menu__item_img" src="./img/sale_baner.png" alt="">
                     </div>
                 </div>
             </li>
-            <li class="menu__list"><a href="#" class="menu__link">kids</a></li>
-            <li class="menu__list"><a href="#" class="menu__link">accesories</a></li>
+            <li class="menu__list"><a href="#" class="menu__link">accesories</a>
+                <div class="dropdown">
+                    <div class="menu__item">
+                        <h3 class="menu__title">accesories</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Blazers</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                    </div>
+                    <div class="menu__item">
+                        <h3 class="menu__title">accesories</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
+                    <div class="menu__item menu__item_mv-dwn">
+                        <h3 class="menu__title">accesories</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                    </div>
+                    <div class="menu__item menu__item_mv-up">
+                        <h3 class="menu__title">accesories</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
+                    <div class="menu__item menu__item_bg">
+                        <img class="menu__item_img" src="./img/sale_baner.png" alt="">
+                    </div>
+                </div>
+            </li>
             <li class="menu__list"><a href="#" class="menu__link">featured</a>
-                <div class="dropdown dropdown_mv">
+                <div class="dropdown">
                     <div class="menu__item">
-                        <h3 class="menu__title">man</h3>
+                        <h3 class="menu__title">featured</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
@@ -160,20 +236,20 @@
                         <a href="#" class="menu__link menu__link_drop">Accessories</a>
                     </div>
                     <div class="menu__item">
-                        <h3 class="menu__title">man</h3>
+                        <h3 class="menu__title">featured</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
                         <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                     </div>
                     <div class="menu__item menu__item_mv-dwn">
-                        <h3 class="menu__title">man</h3>
+                        <h3 class="menu__title">featured</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
                     </div>
                     <div class="menu__item menu__item_mv-up">
-                        <h3 class="menu__title">man</h3>
+                        <h3 class="menu__title">featured</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
@@ -184,10 +260,10 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list "><a href="#" class="menu__link">hot deals</a>
-                <div class="dropdown dropdown_last">
+            <li class="menu__list last"><a href="#" class="menu__link">hot deals</a>
+                <div class="dropdown">
                     <div class="menu__item">
-                        <h3 class="menu__title">man</h3>
+                        <h3 class="menu__title">hot deals</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
@@ -199,20 +275,20 @@
                         <a href="#" class="menu__link menu__link_drop">Accessories</a>
                     </div>
                     <div class="menu__item">
-                        <h3 class="menu__title">man</h3>
+                        <h3 class="menu__title">hot deals</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
                         <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                     </div>
                     <div class="menu__item menu__item_mv-dwn">
-                        <h3 class="menu__title">man</h3>
+                        <h3 class="menu__title">hot deals</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
                     </div>
                     <div class="menu__item menu__item_mv-up">
-                        <h3 class="menu__title">man</h3>
+                        <h3 class="menu__title">hot deals</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
