описание кода css определение располоения dropdown

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list"><a href="#" class="menu__link">featured</a>
+            <li class="menu__list last"><a href="#" class="menu__link">featured</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">featured</h3>
