--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <!-- Главное Меню -->
     <section class="navigation center">
         <ul class="menu">
-            <li class="menu__list"><a href="#" class="menu__link">home</a>
-                <div class="dropdown">
+            <li class="menu__list "><a href="#" class="menu__link">home</a>
+                <div class="dropdown dropdown_home">
                     <div class="menu__item">
                         <h3 class="menu__title">Home</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
@@ -65,8 +65,8 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list"><a href="#" class="menu__link">man</a>
-                <div class="dropdown">
+            <li class="menu__list "><a href="#" class="menu__link">man</a>
+                <div class="dropdown dropdown_man">
                     <div class="menu__item">
                         <h3 class="menu__title">man</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
@@ -105,7 +105,7 @@
                 </div>
             </li>
             <li class="menu__list"><a href="#" class="menu__link">women</a>
-                <div class="dropdown">
+                <div class="dropdown dropdown_woman">
                     <div class="menu__item">
                         <h3 class="menu__title">women</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
@@ -143,7 +143,7 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list"><a href="#" class="menu__link">kids</a>
+            <li class="menu__list kids"><a href="#" class="menu__link">kids</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">kids</h3>
@@ -182,7 +182,7 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list"><a href="#" class="menu__link">accesories</a>
+            <li class="menu__list acc"><a href="#" class="menu__link">accesories</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">accesories</h3>
@@ -221,7 +221,7 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list last"><a href="#" class="menu__link">featured</a>
+            <li class="menu__list last last_point"><a href="#" class="menu__link">featured</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">featured</h3>
