--- a/index.html
+++ b/index.html
@@ -24,8 +24,21 @@
 
             <!-- форма поиска -->
             <form class="main-header__search" action="#">
-                <button class="main-header__button button-hover_pink">Browse<i class="fa fa-caret-down fa-left-padding"
-                        aria-hidden="true"></i></button>
+                <button class="main-header__button button-hover_pink">Browse
+                    <i class="fa fa-caret-down fa-left-padding" aria-hidden="true"></i>
+                    <div class="btn-item">
+                        <h3 class="btn__title">Home</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Blazers</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                    </div>
+                </button>
                 <input class="main-header__input main-header__input_search" type="text" placeholder="Search for item">
                 <label class="main-header__input main-header__input_find" for="">
                     <i class="fa fa-search" aria-hidden="true"></i>
@@ -140,7 +153,7 @@
                     </div>
                     <div">
                         <img class="menu__item_img" src="./img/sale_baner.png" alt="">
-                    </div>
+                </div>
                 </div>
             </li>
             <li class="menu__list kids"><a href="#" class="menu__link">kids</a>
