верстка и стилизация details

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
             </a>
 
             <!-- форма поиска -->
-            
-            <button class="main-header__button button-hover_pink">Browse
-                <i class="fa fa-caret-down fa-left-padding" aria-hidden="true"></i>
-                <div class="btn-item">
-                    <h3 class="btn__title">Home</h3>
+            <details class="drop">
+                <summary class="drop__button ">Browse <i class="fa fa-caret-down fa-left-padding" aria-hidden="true"></i></summary>
+                <div class="drop__item">
+                    <h3 class="drop__title">Home</h3>
                     <a href="#" class="menu__link menu__link_drop">Dresses</a>
                     <a href="#" class="menu__link menu__link_drop">Tops</a>
                     <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
@@ -38,7 +37,7 @@
                     <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
                     <a href="#" class="menu__link menu__link_drop">Accessories</a>
                 </div>
-            </button>
+            </details>
             <form class="main-header__search" action="#">
                 <input class="main-header__input main-header__input_search" type="text" placeholder="Search for item">
                 <label class="main-header__input main-header__input_find" for="">
