кнопка описана, не двигается, падинги заданы, выпадающее меню сверху контента разворачивается

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
                 <h1 class="main-header__brand">bran<span class="main-header__brand_red">d</span></h1>
             </a>
 
-            <!-- форма поиска -->
             <details class="drop">
-                <summary class="drop__button ">Browse <i class="fa fa-caret-down fa-left-padding" aria-hidden="true"></i></summary>
+                <summary class="drop__summary">Browse <i class="fa fa-caret-down" aria-hidden="true"></i></summary>
                 <div class="drop__item">
                     <h3 class="drop__title">Home</h3>
                     <a href="#" class="menu__link menu__link_drop">Dresses</a>
@@ -38,6 +37,8 @@
                     <a href="#" class="menu__link menu__link_drop">Accessories</a>
                 </div>
             </details>
+            
+            <!-- форма поиска -->
             <form class="main-header__search" action="#">
                 <input class="main-header__input main-header__input_search" type="text" placeholder="Search for item">
                 <label class="main-header__input main-header__input_find" for="">
