accesories настроено положение выпадающего меню

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
             </li>
             <li class="menu__list "><a href="#" class="menu__link">man</a>
-                <div class="dropdown dropdown_man">
+                <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">man</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
@@ -119,7 +119,7 @@
                 </div>
             </li>
             <li class="menu__list"><a href="#" class="menu__link">women</a>
-                <div class="dropdown dropdown_woman">
+                <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">women</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
@@ -157,7 +157,7 @@
                 </div>
                 </div>
             </li>
-            <li class="menu__list kids"><a href="#" class="menu__link">kids</a>
+            <li class="menu__list"><a href="#" class="menu__link">kids</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">kids</h3>
@@ -235,7 +235,7 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list last last_point"><a href="#" class="menu__link">featured</a>
+            <li class="menu__list last"><a href="#" class="menu__link">featured</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">featured</h3>
