завершено позиционирование меню

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <!-- Главное Меню -->
     <section class="navigation center">
         <ul class="menu">
-            <li class="menu__list "><a href="#" class="menu__link">home</a>
-                <div class="dropdown dropdown_home">
+            <li class="menu__list "><a href="#1" class="menu__link">home</a>
+                <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">Home</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list "><a href="#" class="menu__link">man</a>
+            <li class="menu__list "><a href="#2" class="menu__link">man</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">man</h3>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list"><a href="#" class="menu__link">women</a>
+            <li class="menu__list"><a href="#3" class="menu__link">women</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">women</h3>
@@ -157,7 +157,7 @@
                 </div>
                 </div>
             </li>
-            <li class="menu__list"><a href="#" class="menu__link">kids</a>
+            <li class="menu__list cntr"><a href="#4" class="menu__link">kids</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">kids</h3>
@@ -196,7 +196,7 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list acc"><a href="#" class="menu__link">accesories</a>
+            <li class="menu__list acc"><a href="#5" class="menu__link">accesories</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">accesories</h3>
@@ -235,7 +235,7 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list last"><a href="#" class="menu__link">featured</a>
+            <li class="menu__list last"><a href="#6" class="menu__link">featured</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">featured</h3>
@@ -274,7 +274,7 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list last"><a href="#" class="menu__link">hot deals</a>
+            <li class="menu__list last"><a href="#7" class="menu__link">hot deals</a>
                 <div class="dropdown">
                     <div class="menu__item">
                         <h3 class="menu__title">hot deals</h3>
@@ -559,7 +559,6 @@
     <!-- // блок Опции -->
 
     <!-- блок Подписок -->
-    <!-- TO dO доделать пагинацию в блоке комментарии -->
     <section class="subscrybe center">
         <div class="subscrybe-comment">
 
@@ -579,7 +578,6 @@
                         class="subscrybe-comment__span"></span>
                 </div>
             </div>
-
         </div>
 
         <div class="subscrybe-form">
@@ -626,11 +624,11 @@
                     <h3 class="brand-container__title">COMPANY</h3>
                 </div>
                 <div class="brand-container__links">
-                    <a href="" class="brand-container__link">Home</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">Shop</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">About</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">How it works</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">Contacts</a>
+                    <a href="" class="menu__link brand-container__link">Home</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Shop</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">About</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">How it works</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Contacts</a>
                 </div>
             </div>
             <!-- baner2 -->
@@ -639,11 +637,11 @@
                     <h3 class="brand-container__title">INFORMATION</h3>
                 </div>
                 <div class="brand-container__links">
-                    <a href="" class="brand-container__link">Terms & Conditions</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">Privacy policy</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">How yo Buy</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">How to Sell</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">Promotion</a>
+                    <a href="" class="menu__link brand-container__link">Terms & Conditions</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Privacy policy</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">How yo Buy</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">How to Sell</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Promotion</a>
                 </div>
             </div>
             <!-- baner3 -->
@@ -652,11 +650,11 @@
                     <h3 class="brand-container__title">SHOP CATEGORY</h3>
                 </div>
                 <div class="brand-container__links">
-                    <a href="" class="brand-container__link">Men</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">Women</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">Child</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">Apparel</a>
-                    <a href="" class="brand-container__link brand-container__link_lh">Brows All</a>
+                    <a href="" class="menu__link brand-container__link">Men</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Women</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Child</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Apparel</a>
+                    <a href="" class="menu__link brand-container__link brand-container__link_lh">Brows All</a>
                 </div>
             </div>
         </div>
