--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <!-- <button class="main-header__account button-hover_pink">My Account<i
                         class="fa fa-caret-down fa-left-padding" aria-hidden="true"></i></button> -->
                 <!-- кнопка профиля -->
-                <details class="drop">
+                <details class="drop drop_account">
                     <summary class="drop__summary">My Account<i class="fa fa-caret-down" aria-hidden="true"></i>
                     </summary>
                     <div class="drop__items">
