--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         class="fa fa-caret-down fa-left-padding" aria-hidden="true"></i></button> -->
                 <!-- кнопка профиля -->
                 <details class="drop drop_account">
-                    <summary class="drop__summary">My Account<i class="fa fa-caret-down" aria-hidden="true"></i>
+                    <summary class="drop__summary drop__summary_account">My Account<i class="fa fa-caret-down" aria-hidden="true"></i>
                     </summary>
                     <div class="drop__items">
                         <div class="drop__item">
