создание модификатора для кнопок browse и account

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <!-- кнопка поиска параметров -->
                 <details class="drop drop_browse">
                     <summary class="drop__summary">Browse <i class="fa fa-caret-down" aria-hidden="true"></i></summary>
-                    <div class="drop__items">
+                    <div class="drop__items drop__items_browse">
                         <div class="drop__item">
                             <h3 class="menu__title">Home</h3>
                             <a href="#" class="menu__link menu__link_drop">Dresses</a>
@@ -73,9 +73,16 @@
                 <details class="drop drop_account">
                     <summary class="drop__summary drop__summary_account">My Account<i class="fa fa-caret-down" aria-hidden="true"></i>
                     </summary>
-                    <div class="drop__items">
-                        <div class="drop__item">
-                
+                    <div class="drop__items drop__items_account">
+                        <div class="drop__item_buy">
+                            <img src="./img/card/card1.png" alt="товар в корзине">
+                            <div class="drop__item-data">
+                                <h3 class="drop__item-text">Rebox Zane</h3>
+                                <i></i>
+                                <p class="drop__item-price">1 x $250</p>
+                            </div>
+                            div.
+                            
                         </div>
                     </div>
                 </details>
