стилизация первого блока картички товара в корзине

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
                 </svg>
                 <!-- кнопка профиля -->
                 <details class="drop drop_account">
-                    <summary class="drop__summary drop__summary_account">My Account<i class="fa fa-caret-down" aria-hidden="true"></i>
+                    <summary class="drop__summary">My Account<i class="fa fa-caret-down" aria-hidden="true"></i>
                     </summary>
                     <div class="drop__items drop__items_account">
                         <div class="drop__item_buy">
                             <img src="./img/card/card1.png" alt="товар в корзине">
                             <div class="drop__item-data">
                                 <h3 class="drop__item-text">Rebox Zane</h3>
-                                <i></i>
+                                <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i>
                                 <p class="drop__item-price">1 x $250</p>
                             </div>
                             div.
