верстка карточки с фото в Мой аккаунт готова

--- a/index.html
+++ b/index.html
@@ -78,11 +78,20 @@
                             <img src="./img/card/card1.png" alt="товар в корзине">
                             <div class="drop__item-data">
                                 <h3 class="drop__item-text">Rebox Zane</h3>
-                                <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star-half-o" aria-hidden="true"></i>
-                                <p class="drop__item-price">1 x $250</p>
+                                <div class="drop__item-star">
+                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
+                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
+                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
+                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
+                                    <i class="fa fa-star-half-o drop_star" aria-hidden="true"></i>
+                                </div>
+                                <p class="drop__item-text drop__item_price">1 x $250</p>
                             </div>
-                            div.
-                            
+                            <div class="drop__close">
+                                
+                                <i class="fa fa-times-circle drop__item_close" aria-hidden="true"></i>
+                            </div>
+
                         </div>
                     </div>
                 </details>
