блок финальной цены готов

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 <details class="drop drop_account">
                     <summary class="drop__summary">My Account<i class="fa fa-caret-down" aria-hidden="true"></i>
                     </summary>
+                    <!-- блок с карточками -->
                     <div class="drop__items drop__items_account">
+                        <!-- карточка 1 -->
                         <div class="drop__item_buy">
                             <img src="./img/card/card1.png" alt="товар в корзине">
                             <div class="drop__item-data">
@@ -85,13 +87,35 @@
                                     <i class="fa fa-star drop_star" aria-hidden="true"></i>
                                     <i class="fa fa-star-half-o drop_star" aria-hidden="true"></i>
                                 </div>
-                                <p class="drop__item-text drop__item_price">1 x $250</p>
+                                <p class="drop__item-text drop__item_price">1 <span class="drop__span">x</span> $250</p>
                             </div>
                             <div class="drop__close">
-                                
                                 <i class="fa fa-times-circle drop__item_close" aria-hidden="true"></i>
                             </div>
-
+                        </div>
+                        <hr>
+                        <!-- карточка 2 -->
+                        <div class="drop__item_buy">
+                            <img src="./img/card/card2.png" alt="товар в корзине">
+                            <div class="drop__item-data">
+                                <h3 class="drop__item-text">Rebox Zane</h3>
+                                <div class="drop__item-star">
+                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
+                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
+                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
+                                    <i class="fa fa-star drop_star" aria-hidden="true"></i>
+                                    <i class="fa fa-star-half-o drop_star" aria-hidden="true"></i>
+                                </div>
+                                <p class="drop__item-text drop__item_price">1 <span class="drop__span">x</span> $250</p>
+                            </div>
+                            <div class="drop__close">
+                                <i class="fa fa-times-circle drop__item_close" aria-hidden="true"></i>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="drop__total">
+                            <p class="drop__total_price">TOTAL</p>
+                            <p class="drop__total_price">$500.00</p>
                         </div>
                     </div>
                 </details>
