--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         fill="#E8E8E8" />
                 </svg>
                 <!-- кнопка профиля -->
-                <details class="drop drop_account">
+                <details class="drop drop_account" open>
                     <summary class="drop__summary">My Account<i class="fa fa-caret-down" aria-hidden="true"></i>
                     </summary>
                     <!-- блок с карточками -->
@@ -116,6 +116,10 @@
                         <div class="drop__total">
                             <p class="drop__total_price">TOTAL</p>
                             <p class="drop__total_price">$500.00</p>
+                        </div>
+                        <div class="drop__button-account">
+                            <a class="drop__button-account_link global_pink" href="#">Checkout</a>
+                            <a class="drop__button-account_link"  href="#">Go to cart</a>
                         </div>
                     </div>
                 </details>
