кнопка Мой Аккаунт завершена

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         fill="#E8E8E8" />
                 </svg>
                 <!-- кнопка профиля -->
-                <details class="drop drop_account" open>
+                <details class="drop drop_account">
                     <summary class="drop__summary">My Account<i class="fa fa-caret-down" aria-hidden="true"></i>
                     </summary>
                     <!-- блок с карточками -->
@@ -118,8 +118,8 @@
                             <p class="drop__total_price">$500.00</p>
                         </div>
                         <div class="drop__button-account">
-                            <a class="drop__button-account_link global_pink" href="#">Checkout</a>
-                            <a class="drop__button-account_link"  href="#">Go to cart</a>
+                            <a class="drop__button-account_link drop__button-account_hover" href="#">Checkout</a>
+                            <a class="menu__link drop__button-account_link drop__button-account_gray"  href="#">Go to cart</a>
                         </div>
                     </div>
                 </details>
